--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/node": "^12.0.0",
+    "bootstrap-icons": "^1.2.2",
     "react": "^17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
