--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "let-baby-type",
   "version": "0.1.0",
   "private": true,
+  "main": "src/electron.js",
+  "homepage": ".",
   "dependencies": {
     "@types/node": "^12.0.0",
     "bootstrap-icons": "^1.2.2",
+    "electron": "^11.2.0",
     "react": "^17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "^4.0.3",
